update write up, add ppt, and Karsten files

--- a/ProjectOneBearKillings.ipynb
+++ b/ProjectOneBearKillings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,15 @@
     "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import geopandas"
+    "import geopandas\n",
+    "#import matplotlib_venn\n",
+    "#from matplotlib_venn import venn2\n",
+    "#from matplotlib import rc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +180,7 @@
        "4        0       0                1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,12 +195,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'age'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   2896\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2897\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2898\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'age'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-8111487fb3f6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mbear_killings\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbear_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Date\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Month\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Year\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Location\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Description\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Type of bear\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Grizzly\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Only one killed\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mbear_killing_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbear_killings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Type\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Name\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mbear_killing_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"age_bins\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcut\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbear_killing_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"age\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbins\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m19\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m39\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m59\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m79\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m99\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mbear_killing_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"age_range\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcut\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbear_killing_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"age\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbins\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m19\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m39\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m59\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m79\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m99\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"Child\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Young Adult\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Adult\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Senior\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Elderly\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mbear_killing_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2993\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2994\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2995\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2996\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2997\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   2897\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2898\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2899\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_maybe_cast_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2900\u001b[0m         \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtolerance\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtolerance\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2901\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'age'"
+     ]
+    }
+   ],
    "source": [
     "### 1. WHO DIES FROM BEARS?#####\n",
-    "# find the gender distribution of victims \n"
+    "# find the gender distribution of victims \n",
+    "bear_killings = bear_data.drop([\"Date\", \"Month\", \"Year\", \"Location\", \"Description\", \"Type of bear\", \"Grizzly\", \"Only one killed\"], axis=1)\n",
+    "bear_killing_df = bear_killings.drop([\"Type\", \"Name\"], axis=1)\n",
+    "bear_killing_df[\"age_bins\"] = pd.cut(x=bear_killing_df[\"age\"], bins = [0, 19, 39, 59, 79, 99])\n",
+    "bear_killing_df[\"age_range\"] = pd.cut(x=bear_killing_df[\"age\"], bins = [0, 19, 39, 59, 79, 99], labels = [\"Child\", \"Young Adult\", \"Adult\", \"Senior\", \"Elderly\"])\n",
+    "bear_killing_df.head()"
    ]
   },
   {
@@ -206,7 +240,170 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# find the age demographics of victims\n"
+    "# find the age demographics of victims\n",
+    "gender = bear_killing_df.groupby(\"gender\")\n",
+    "female = gender.get_group(\"female\").count()\n",
+    "female_count = female[\"gender\"]\n",
+    "male = gender.get_group(\"male\").count()\n",
+    "male_count = male[\"gender\"]\n",
+    "hunters = bear_killing_df.groupby(\"Hunter\")\n",
+    "hunter = hunters.get_group(int(1)).count()\n",
+    "dead_hunters = hunter[\"Hunter\"]\n",
+    "hikers = bear_killing_df.groupby(\"Hikers\")\n",
+    "hiker = hikers.get_group(int(1)).count()\n",
+    "dead_hikers = hiker[\"Hikers\"]\n",
+    "female_df = gender.get_group(\"female\")\n",
+    "female_hunters = female_df.groupby(\"Hunter\")\n",
+    "female_hunter = female_hunters.get_group(int(1)).count()\n",
+    "dead_female_hunters = female_hunter[\"Hunter\"]\n",
+    "male_df = gender.get_group(\"male\")\n",
+    "male_hunters = male_df.groupby(\"Hunter\")\n",
+    "male_hunter = male_hunters.get_group(int(1)).count()\n",
+    "dead_male_hunters = male_hunter[\"Hunter\"]\n",
+    "male_hikers = male_df.groupby(\"Hikers\")\n",
+    "male_hiker = male_hikers.get_group(int(1)).count()\n",
+    "dead_male_hikers = male_hiker[\"Hikers\"]\n",
+    "female_hikers = female_df.groupby(\"Hikers\")\n",
+    "female_hiker = female_hikers.get_group(int(1)).count()\n",
+    "dead_female_hikers = female_hiker[\"Hikers\"]\n",
+    "age_range = bear_killing_df.groupby(\"age_range\")\n",
+    "children = age_range.get_group(\"Child\").count()\n",
+    "children_count = children[\"age_range\"]\n",
+    "young_adult = age_range.get_group(\"Young Adult\").count()\n",
+    "young_adult_count = young_adult[\"age_range\"]\n",
+    "adult = age_range.get_group(\"Adult\").count()\n",
+    "adult_count = adult[\"age_range\"]\n",
+    "senior = age_range.get_group(\"Senior\").count()\n",
+    "senior_count = senior[\"age_range\"]\n",
+    "elderly = age_range.get_group(\"Elderly\").count()\n",
+    "elderly_count = elderly[\"age_range\"]\n",
+    "children_df = age_range.get_group(\"Child\")\n",
+    "child_gender = children_df.groupby(\"gender\")\n",
+    "young_adult_df = age_range.get_group(\"Young Adult\")\n",
+    "young_adult_gender = young_adult_df.groupby(\"gender\")\n",
+    "adult_df = age_range.get_group(\"Adult\")\n",
+    "adult_gender = adult_df.groupby(\"gender\")\n",
+    "senior_df = age_range.get_group(\"Senior\")\n",
+    "senior_gender = senior_df.groupby(\"gender\")\n",
+    "elderly_df = age_range.get_group(\"Elderly\")\n",
+    "elderly_gender = elderly_df.groupby(\"gender\")\n",
+    "child_female = child_gender.get_group(\"female\").count()\n",
+    "child_female_count = child_female[\"gender\"]\n",
+    "child_male = child_gender.get_group(\"male\").count()\n",
+    "child_male_count = child_male[\"gender\"]\n",
+    "young_adult_male = young_adult_gender.get_group(\"male\").count()\n",
+    "young_adult_male_count = young_adult_male[\"gender\"]\n",
+    "young_adult_female = young_adult_gender.get_group(\"female\").count()\n",
+    "young_adult_female_count = young_adult_female[\"gender\"]\n",
+    "adult_male = adult_gender.get_group(\"male\").count()\n",
+    "adult_male_count = adult_male[\"gender\"]\n",
+    "adult_female = adult_gender.get_group(\"female\").count()\n",
+    "adult_female_count = adult_female[\"gender\"]\n",
+    "senior_male = senior_gender.get_group(\"male\").count()\n",
+    "senior_male_count = senior_male[\"gender\"]\n",
+    "senior_female = senior_gender.get_group(\"female\").count()\n",
+    "senior_female_count = senior_female[\"gender\"]\n",
+    "elderly_female = elderly_gender.get_group(\"female\").count()\n",
+    "elderly_female_count = elderly_female[\"gender\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rc('font', weight='bold')\n",
+    "\n",
+    "bars1 = [25, 37, 43, 17, 0]\n",
+    "bars2 = [16, 17, 4, 6, 1]\n",
+    " \n",
+    "bars = np.add(bars1, bars2).tolist()\n",
+    " \n",
+    "r = [0,1,2,3,4]\n",
+    " \n",
+    "names = ['Child','Young Adult','Adult','Senior','Elderly']\n",
+    "barWidth = 1\n",
+    " \n",
+    "plt.bar(r, bars1, color='blue', edgecolor='white', width=barWidth)\n",
+    "\n",
+    "plt.bar(r, bars2, bottom=bars1, color='red', edgecolor='white', width=barWidth)\n",
+    "\n",
+    "plt.xticks(r, names, fontweight='bold')\n",
+    "plt.xlabel(\"group\")\n",
+    "\n",
+    "plt.show()\n",
+    "plt.savefig(\"Graphs/AgeGroup.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = \"The Rest\", \"Hunters\", \"Hikers\"\n",
+    "sizes = [144, 16,6]\n",
+    "explode = (0, 0, 0)  \n",
+    "\n",
+    "fig1, ax1 = plt.subplots()\n",
+    "ax1.pie(sizes, explode=explode, labels=labels,\n",
+    "        shadow=True, startangle=90)\n",
+    "ax1.axis('equal') \n",
+    "\n",
+    "plt.show()\n",
+    "plt.savefig(\"Graphs/ActivityPie.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = \"Men\", \"Women\"\n",
+    "sizes = [73.5, 26.5]\n",
+    "explode = (0.1, 0,)  \n",
+    "\n",
+    "fig1, ax1 = plt.subplots()\n",
+    "ax1.pie(sizes, explode=explode, labels=labels, autopct='%1.1f%%',\n",
+    "        shadow=True, startangle=90)\n",
+    "ax1.axis('equal') \n",
+    "\n",
+    "plt.show()\n",
+    "plt.savefig(\"Graphs/GenderPie.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = \"Children\", \"Young Adults\", \"Adults\", \"Seniors\", \"Elderly\"\n",
+    "sizes = [41, 54, 47, 23, 1]\n",
+    "explode = (0, 0 , 0, 0, 0)  \n",
+    "\n",
+    "fig1, ax1 = plt.subplots()\n",
+    "ax1.pie(sizes, explode=explode, labels=labels,autopct = \"\",\n",
+    "        shadow=True, startangle=90)\n",
+    "ax1.axis('equal') \n",
+    "\n",
+    "plt.show()\n",
+    "plt.savefig(\"Graphs/AgeGroupPie.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({'Male':[25, 37, 43, 17, 0], 'Female':[16, 17, 4, 6, 1]}, index=[\"Children\", \"Young Adults\", \"Adults\", \"Seniors\", \"Elderly\"] )\n",
+    " \n",
+    "df.plot(kind = \"pie\", subplots=True, figsize=(16,8))\n",
+    "plt.show()\n",
+    "plt.savefig(\"Graphs/GenderAgeBin.png\")"
    ]
   },
   {
